# CNPoetry-Hermes

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
data/raw/allusions/: allusion_seeds.jsonl
data/raw/gujilab/: erya.jsonl  shuowen.jsonl
data/raw/hf_poetrymteb/: analysis_sample.jsonl
data/raw/longyusheng/: README.md  cipu.jsonl  tangsong_cipu.xml
data/raw/ytenx/: README.md  guangyun_chars.tsv  guangyun_syllables.tsv
docs/: DESIGN.md  ROADMAP.md
hermes_poetry/: __init__.py  cli.py  config.py  health.py  lexicon.py  orchestrator.py  safety.py  schemas.py  textutil.py
hermes_poetry/agent/: __init__.py  agent.py  citation.py  claims.py  council.py  tools.py
hermes_poetry/apps/: compose.py  engine.py
hermes_poetry/corpus/: cipu.py  classics.py  fetch.py  normalize.py  sources.py
hermes_poetry/eval/: bench.py  suites.py
hermes_poetry/extract/: annotate.py  couplet.py  initial_rules.py  metrics.py  phonology.py  semantic_layers.py
hermes_poetry/induce/: allusions.py  intertext.py  network.py  profiles.py  rhyme.py
hermes_poetry/llm/: __init__.py  client.py  prompts.py  providers.py
hermes_poetry/rag/: bm25.py  poem_rag.py
hermes_poetry/review/: gates.py
hermes_poetry/server/: http_server.py  service.py
hermes_poetry/server/static/: app.css  app.js  (+1 more)
hermes_poetry/skills/: compiler.py  skill_rag.py
notebooks/: CNPoetry_Hermes_Colab.ipynb
tests/: _common.py  test_adversarial_round2.py  test_agent.py  test_apps.py  test_core.py  test_integrations.py  test_prosody_gold.py  test_review.py  test_round4_features.py  test_server.py
